# tiny-os

./: CMakeLists.txt  debug.sh  gdbinit  start-qemu.sh
src/base/: atomic.h  bitzone.h  defs.h  elf.h  error.h  list.h  stdarg.h  unistd.h  x86.h
src/bootloader/: asm.h  boot_asm.S  boot_main.c
src/kernel/: entry.S  init.c
src/kernel/core/: env.h
src/kernel/debug/: assert.c  assert.h  kernel_print.c  kernel_print.h  stab.h
src/kernel/driver/: clock.c  clock.h  console.c  console.h  ide.c  ide.h  keyboard.c  keyboard.h
src/kernel/filesystem/: fs.h  swap.c  swap.h
src/kernel/filesystem/manager/: fifo.c  fifo.h  interface.h
src/kernel/interrupt/: gate.h  picirq.c  picirq.h  synchronous.h  trap.c  trap.h  trap_entry.S  vectors.S
src/kernel/libs/: stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h
src/kernel/memory/: gdt.h  layout.h  page.h  physical.c  physical.h  site.h  virtual.c  virtual.h
src/kernel/memory/manager/: first_fit.c  first_fit.h
src/kernel/process/: load.c  load.h  process.c  process.h  schedule.c  schedule.h  switch.S  system.c  system.h
src/libs/: format.c  format.h  string.c
src/user/: hello.c
src/user/libs/: init_main.S  stdio.c  stdio.h  syscall.c  syscall.h  system.c  system.h  wrapper_main.c
src/utils/: arithmetic.c  arithmetic.h
tools/: boot.ld  kernel.ld  sign.c
